--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 </head>
 <body>
+    <!--<a href='https://br.freepik.com/fotos-vetores-gratis/negocio'>Negócio vetor criado por rawpixel.com - br.freepik.com</a>-->
     <div class="container">
         <h1>Lista de Tarefas</h1>
         <input id="tarefas" data-ls-module="charCounter" maxlength="50" name="tarefas" type="text" placeholder="Digite sua Tarefa">
